--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_storage: ^12.4.3
   flutter_stripe: ^11.4.0
   http:
+  appwrite: ^14.0.0
 
 dev_dependencies:
   flutter_test:
